--- a/enigmi/bin/main/application.yml
+++ b/enigmi/bin/main/application.yml
@@ -17,7 +17,19 @@ spring:
         # consul deve restituire solo servizi che passano l'health check (default=false) 
         queryPassing: true 
     loadbalancer: 
-      ribbon.enabled: false 
+      ribbon.enabled: false
+  jpa:
+    database: POSTGRESQL
+    show-sql: true
+    hibernate:
+      ddl-auto: update
+      use-new-id-generator-mappings: true
+  datasource:
+    platform: postgres
+    url: jdbc:postgresql://db_enigmi:5432/enigmi
+    username: postgres
+    password: postgres
+    driver-class-name: org.postgresql.Driver
 
 server: 
   port: ${PORT:${SERVER_PORT:0}}
