--- a/enigmi-seguiti/build.gradle
+++ b/enigmi-seguiti/build.gradle
@@ -21,7 +21,7 @@ dependencies {
 //	implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-resilience4j'
 
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.postgresql:postgresql'
+	implementation 'org.hsqldb:hsqldb'
 
 	compileOnly "org.projectlombok:lombok:${lombokVersion}"
 	annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
