--- a/enigmi-seguiti/src/main/resources/application.yml
+++ b/enigmi-seguiti/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     name: enigmi-seguiti
   cloud:
     consul:
-      host: localhost
+      host: consul
       port: 8500
       discovery: 
         instanceId: ${spring.application.name}-${spring.cloud.client.hostname}-${random.value}
