--- a/connessioni/src/main/resources/application.yml
+++ b/connessioni/src/main/resources/application.yml
@@ -18,7 +18,18 @@ spring:
         queryPassing: true 
     loadbalancer: 
       ribbon.enabled: false 
-
+  jpa: 
+    database: POSTGRESQL 
+    show-sql: true 
+    hibernate: 
+      ddl-auto: update 
+      use-new-id-generator-mappings: true 
+  datasource: 
+    platform: postgres 
+    url: jdbc:postgresql://db_connessioni:5432/connessioni
+    username: postgres 
+    password: postgres 
+    driver-class-name: org.postgresql.Driver
 server: 
   port: ${PORT:${SERVER_PORT:0}}
 #  port: 8080
