--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     build: ./enigmi
     depends_on:
       - "consul"
+      - "kafka"
   connessioni:
     container_name: connessioni_service
     build: ./connessioni
@@ -46,6 +47,30 @@ services:
         POSTGRES_USER: postgres 
         POSTGRES_PASSWORD: postgres 
         POSTGRES_DB: connessioni
+  zookeeper:
+    image: bitnami/zookeeper:latest
+    ports:
+      - "2181:2181"
+    environment:
+      - ALLOW_ANONYMOUS_LOGIN=yes
+  kafka:
+    image: bitnami/kafka:latest
+    depends_on:
+      - "zookeeper"
+    ports:
+      - "9092:9092"
+    environment:
+#       - KAFKA_BROKER_ID=1
+      - ALLOW_PLAINTEXT_LISTENER=yes
+#       - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092
+#       - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://127.0.0.1:9092
+#       - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://10.11.121:9092
+      - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
+      - KAFKA_ADVERTISED_HOST_NAME=kafka
+#      - KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
+      - KAFKA_CREATE_TOPICS="enigmi-event-channel:2:1, connessioni-event-channel:2:1"
+    volumes:
+      -   /var/run/docker.sock:/var/run/docker.sock
 volumes:
   enigmi:
     external: true
