--- a/enigmi/src/main/resources/application.yml
+++ b/enigmi/src/main/resources/application.yml
@@ -30,6 +30,22 @@ spring:
     username: postgres 
     password: postgres 
     driver-class-name: org.postgresql.Driver
+  # kafka:
+  #   bootstrap-servers: kafka:9092
+  #   consumer: 
+  #     group-id: ${spring.application.name}
+  #     auto-offset-reset: earliest
+  #     key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+  #     value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+  #     properties:
+  #       spring:
+  #         json:
+  #           trusted:
+  #             packages: *
+  #   producer:
+  #     key-serializer: org.apache.kafka.common.serialization.StringSerializer
+  #     value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+
 server: 
   port: ${PORT:${SERVER_PORT:0}}
 #  port: 8080
