--- a/enigmi-seguiti/build.gradle
+++ b/enigmi-seguiti/build.gradle
@@ -14,14 +14,19 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter'
 	implementation 'org.springframework.cloud:spring-cloud-starter-consul-discovery'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
-
+	implementation 'org.springframework.kafka:spring-kafka'
+	
 	implementation 'org.springframework.boot:spring-boot-starter-webflux' 
 	implementation 'org.springframework.cloud:spring-cloud-starter-loadbalancer'
 //	implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-reactor-resilience4j'
 //	implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-resilience4j'
-
+	implementation project(":enigmi-api-event")
+    //implementation project(":connessioni-api-event")
+    implementation project(":common-api-event")
+	
+	
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.hsqldb:hsqldb'
+	implementation 'org.postgresql:postgresql'
 
 	compileOnly "org.projectlombok:lombok:${lombokVersion}"
 	annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
