connessioni e modifiche enigmi-seguiti
aggiunta pubblicazioni eventi sul canale kafka delle connessioni e modfica del metodo get sugli enigmi seguiti per accedere solo alla propria tabella

--- a/enigmi-seguiti/bin/main/application.properties
+++ b/enigmi-seguiti/bin/main/application.properties
@@ -1,9 +1,9 @@
 #Kafka Configuration
 asw.edipogram.kafka.channel.events.enigmi=enigmi-event-channel
-# asw.edipogram.kafka.channel.events.connessione=connessioni-event-channel
+asw.edipogram.kafka.channel.events.connessione=connessioni-event-channel
 
 asw.edipogram.kafka.groupid.events.enigmi=enigmi-event-consumer
-# asw.edipogram.kafka.groupid.events.connessioni=connessioni-event-consumer
+asw.edipogram.kafka.groupid.events.connessioni=connessioni-event-consumer
 
 # KAFKA
 spring.kafka.bootstrap-servers=kafka:9092
