--- a/settings.gradle
+++ b/settings.gradle
@@ -4,5 +4,6 @@ include 'enigmi-seguiti'
 include 'api-gateway'
 include 'common-api-event'
 include 'enigmi-api-event'
+include 'connessioni-api-event'
 
 rootProject.name = 'asw-edipogram'
