--- a/connessioni/build.gradle
+++ b/connessioni/build.gradle
@@ -14,6 +14,10 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter'
 	implementation 'org.springframework.cloud:spring-cloud-starter-consul-discovery'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	implementation 'org.springframework.kafka:spring-kafka'
+
+	implementation project(":common-api-event")
+	implementation project(":connessioni-api-event")
 
 //	implementation 'org.springframework.boot:spring-boot-starter-webflux' 
 //	implementation 'org.springframework.cloud:spring-cloud-starter-loadbalancer'
