--- a/enigmi-seguiti/src/main/resources/application.properties
+++ b/enigmi-seguiti/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 #Kafka Configuration
 asw.edipogram.kafka.channel.events.enigmi=enigmi-event-channel
-# asw.edipogram.kafka.channel.events.connessione=connessioni-event-channel
+asw.edipogram.kafka.channel.events.connessione=connessioni-event-channel
 
 asw.edipogram.kafka.groupid.events.enigmi=enigmi-event-consumer
-# asw.edipogram.kafka.groupid.events.connessioni=connessioni-event-consumer
+asw.edipogram.kafka.groupid.events.connessioni=connessioni-event-consumer
 
 # KAFKA
 spring.kafka.bootstrap-servers=kafka:9092
